--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       src="https://unpkg.com/@google/model-viewer/dist/model-viewer.min.js"
     ></script>
   </head>
-  <body>
+  <body style="padding: 0; margin: 0">
     <model-viewer
       style="width: 100vw; height: 100vh"
       src="https://modelviewer.dev/shared-assets/models/RobotExpressive.glb"
@@ -23,22 +23,15 @@
       max-camera-orbit="auto 90deg auto"
       alt="A 3D model of a robot"
       ar
-      auto-rotate
-      xr-environment
       camera-controls
     >
-    <button slot="ar-button" id="ar-button">
-      View in your space
-    </button>
+      <button slot="ar-button" id="ar-button">View in your space</button>
 
-    <div id="ar-prompt">
-      <img src="https://modelviewer.dev/assets/hand.png">
-    </div>
+      <div id="ar-prompt">
+        <img src="https://modelviewer.dev/assets/hand.png" />
+      </div>
 
-    <button id="ar-failure">
-      AR is not tracking!
-    </button>
-
+      <button id="ar-failure">AR is not tracking!</button>
     </model-viewer>
   </body>
 </html>
