--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
     >
       <button slot="ar-button" id="ar-button">View in your space</button>
 
-      <div id="ar-prompt">
+      <!-- <div id="ar-prompt">
         <img src="https://modelviewer.dev/assets/hand.png" />
-      </div>
+      </div> -->
 
       <button id="ar-failure">AR is not tracking!</button>
     </model-viewer>
