--- a/index.html
+++ b/index.html
@@ -25,11 +25,11 @@
       ar
       camera-controls
     >
-      <button slot="ar-button" id="ar-button">View in your space</button>
+      <button style="height: 200px; padding: 10px" slot="ar-button" id="ar-button">View in your space</button>
 
-      <!-- <div id="ar-prompt">
+      <div id="ar-prompt">
         <img src="https://modelviewer.dev/assets/hand.png" />
-      </div> -->
+      </div>
 
       <button id="ar-failure">AR is not tracking!</button>
     </model-viewer>
