--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
   <body style="padding: 0; margin: 0">
     <model-viewer
       style="width: 100vw; height: 100vh"
-      src="https://modelviewer.dev/shared-assets/models/RobotExpressive.glb"
+      src="ship_4.gltf"
       shadow-intensity="2"
       skybox-image="https://modelviewer.dev/shared-assets/environments/spruit_sunrise_1k_HDR.jpg"
       skybox-height="2m"
